Changes with Apache 1.3.18

  *) Win32/Netware: correct relative paths and eliminate trailing slash
     in the -d serverroot argument.  -d Serverroot may be relative to 
     the path of the Apache.exe file.  [William Rowe]

  *) Win32; fix the ServerRoot as the path of the Apache.exe file.
     Eliminates the requirement of a 'backup' registry key to locate
     the server root.  [William Rowe]

  *) NetWare MOD_TLS fixes to disable nagles properly when making an SSL
     connection, and properly detect an SSL connection based on the port
     and work around the r->server->port 80 bug.  
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) TPF startup/shutdown fixes. [David McCreedy <McCreedy@us.ibm.com>]

  *) Correct a typo in httpd.conf.
     [Kunihiro Tanaka <tanaka@apache.or.jp>] PR#7154 

  *) Get the correct IP address if ServerName isn't set and we can't
     find a fully-qualified domain name at startup.
     [Danek Duvall <dduvall@eng.sun.com>] PR#7170

  *) Fix pointer arithmetic in mod_rewrite map expansion.
     [Christopher A. Bongaarts <cab@tc.umn.edu>] PR#7157, 7158

  *) Fixed a problem with file extensions being truncated during
     the call to ap_os_canonical_filename().
     [Brad Nicholes <BNICHOLES@novell.com>]

Changes with Apache 1.3.17

  *) Normalize the Netware path names to close a potential security
     hole in comparing paths when the adminstrator specifies both
     sys:foo and sys:/foo formats in the same httpd.conf file.
     [Brad Nicholes]

  *) Fix an unlikely segfault provided a zero length string in the
     translate_userdir() call on win32/os2, and accept backslashes
     in the UserDir directive on those platforms [William Rowe]

  *) Fixed translate_userdir() in MOD_USERDIR.C so that it correctly
     recognizes NetWare absolute paths.  This fixes the problem where
     MOD_USERDIR was trying to redirect to an absolute NetWare path
     rather than opening the file at the specified location.  This 