@@ -1,5 +1,9 @@
 Changes with Apache 1.3.18
 
+  *) Changed ap_os_is_filename_valid on NetWare to accept 
+     SERVER/VOLUME:/PATH/FILE as a valid filename pattern. 
+     [Brad Nicholes <BNICHOLES@novell.com>]
+
   *) Win32/Netware: correct relative paths and eliminate trailing slash
      in the -d serverroot argument.  -d Serverroot may be relative to 
      the path of the Apache.exe file.  [William Rowe]
